--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
 
 #intro-animation {
     position: fixed;
-    bottom: 0; /* 从右下角开始 */
-    right: 0; /* 从右下角开始 */
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: #282c34;
@@ -17,17 +17,15 @@ body {
     justify-content: center;
     align-items: center;
     opacity: 1;
-    animation: moveAndFadeOut 3s forwards; /* 动画持续时间和效果 */
+    animation: fadeOut 3s forwards; /* 动画持续时间和效果 */
 }
 
-@keyframes moveAndFadeOut {
+@keyframes fadeOut {
     0% {
-        transform: translate(0, 0); /* 初始位置 */
         opacity: 1;
     }
     100% {
-        transform: translate(-100vw, -100vh); /* 移动到左上角 */
-        opacity: 0; /* 渐隐 */
+        opacity: 0;
         visibility: hidden; /* 动画结束后隐藏元素 */
     }
 }
